--- a/customer/kubernetes/deployment.yaml
+++ b/customer/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: customer
-          image: username/customer:latest
+          image: sejunyoo/customer:v1
           ports:
             - containerPort: 8080
           readinessProbe:
