--- a/store/kubernetes/deployment.yaml
+++ b/store/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: store
-          image: username/store:latest
+          image: sejunyoo/store:v1
           ports:
             - containerPort: 8080
           readinessProbe:
