--- a/frontend/kubernetes/deployment.yml
+++ b/frontend/kubernetes/deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: username/frontend:latest
+          image: sejunyoo/frontend:v1
           ports:
             - containerPort: 8080
           readinessProbe:
